[gd_scene load_steps=10 format=2]

[ext_resource path="res://hud/hud_fight.gd" type="Script" id=1]
[ext_resource path="res://hud/bombs_icon.png" type="Texture" id=2]
[ext_resource path="res://hud/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://hud/lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://font/Colored Crayons.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://hud/energy_bar_bg.png" type="Texture" id=6]
[ext_resource path="res://hud/energy_bar_fill.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[node name="hud_fight" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="degats" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 14.0
margin_top = 72.0
margin_right = 102.0
margin_bottom = 153.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/degats"]
margin_right = 80.0
margin_bottom = 81.0

[node name="degat" type="TextureRect" parent="CanvasLayer/degats/MarginContainer"]
margin_right = 80.0
margin_bottom = 81.0
texture = ExtResource( 2 )

[node name="pv_ennemy" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 625.0
margin_top = 8.0
margin_right = 1025.0
margin_bottom = 61.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/pv_ennemy"]
margin_right = 396.0
margin_bottom = 53.0

[node name="life_ennemy" type="TextureProgress" parent="CanvasLayer/pv_ennemy/MarginContainer"]
margin_right = 396.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="pv_hero" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 12.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 66.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/pv_hero"]
margin_right = 396.0
margin_bottom = 58.0

[node name="life_hero" type="TextureProgress" parent="CanvasLayer/pv_hero/MarginContainer"]
margin_right = 396.0
margin_bottom = 58.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="valeur_degats" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 90.0
margin_top = 99.0
margin_right = 139.0
margin_bottom = 153.0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/valeur_degats"]
margin_left = 32.0
margin_right = 49.0
margin_bottom = 54.0

[node name="valeur_degat" type="Label" parent="CanvasLayer/valeur_degats/MarginContainer"]
margin_top = 8.0
margin_right = 17.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.933333, 0.917647, 0.917647, 1 )
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 159.742
margin_top = 101.113
margin_right = 419.742
margin_bottom = 161.113

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 248.0
margin_bottom = 60.0

[node name="xp" type="TextureProgress" parent="CanvasLayer/HBoxContainer/MarginContainer"]
margin_right = 248.0
margin_bottom = 60.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 188.029
margin_top = 102.139
margin_right = 228.029
margin_bottom = 142.139

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 40.0

[node name="level" type="Label" parent="CanvasLayer/HBoxContainer2/MarginContainer"]
margin_top = 9.0
margin_right = 10.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.866667, 0.0666667, 0.0666667, 1 )
text = "1"
